Archive2/08/68a99b31dd181b/output
main.cpp: In lambda function:
main.cpp:9:40: error: 'this' was not captured for this lambda function
     auto stackoverflow = []()->void{ (*this)(); };
                                        ^
